--- a/IPLwebsite/css/styles.css
+++ b/IPLwebsite/css/styles.css
@@ -777,6 +777,11 @@ input[type='checkbox'] {
 	background: linear-gradient(to bottom right, rgba(157,0,255,0.8) ,rgba(24,163,254,0.7)), url('../images/pubg-mobile-uhd.jpg') center center no-repeat;
 	background-size: cover; 
 }
+.
+header2 {
+	background: linear-gradient(to bottom right, rgba(157,0,255,0.8) ,rgba(24,163,254,0.7)), url('../images/pubg_bg.jpg') center center no-repeat;
+	background-size: cover; 
+}
 
 .header .header-content {
 	padding-top: 9rem;
